Write user endpoint tests
