# backend/router/routes/requests.js
@@ -4,19 +4,21 @@ const requestController = require('../../controllers/requests')
 const grantAccess = require('../router.middleware').grantAccess
 //Request routes
 
-//GETALL
+//REQUIRES VALID TOKEN WITH ANY ROLE
+
+//GET ALL REQUESTS
 router.get('/', (req, res, next) => grantAccess("", req, res, next), requestController.getAllRequests)
 
-//GETBYID
+//GET REQUEST BY ID
 router.get('/:id', (req, res, next) => grantAccess("", req, res, next), requestController.getRequestById)
 
-//POST
+//CREATE REQUEST
 router.post('/', (req, res, next) => grantAccess("", req, res, next), requestController.createNewRequest)
 
-//PUT
+//UPDATE REQUEST
 router.put('/:id', (req, res, next) => grantAccess("", req, res, next), requestController.updateRequest)
 
-//DELETE
+//DELETE REQUEST
 router.delete('/:id', (req, res, next) => grantAccess("", req, res, next), requestController.deleteRequest)
 
 module.exports = router
